# bevy-egui-wallpaper-generator

./: .gitignore  Cargo.toml
.claude/: settings.json
.github/workflows/: deploy-randomfart.yml
assets/shaders/: blur.wgsl  bubble.wgsl  circuit.wgsl  flow_field.wgsl  halftone.wgsl  maze.wgsl  reaction_diffusion.wgsl  wfc.wgsl
randomfart/: Cargo.toml  index.html
randomfart/src/: lib.rs  main.rs
src/: main.rs
tessel/: Cargo.toml
tessel/assets/shaders/: crackle.wgsl  engrave.wgsl  mosaic.wgsl  op_art.wgsl  string_art.wgsl  topo.wgsl  weave.wgsl
tessel/src/: main.rs
