[package]
name = "randomfart"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.18", features = ["webgpu"] }
bevy_egui = "0.39"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
